<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="14dp"
    tools:context=".UI.LoginFragment">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1">

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/serverHost" />

            <EditText
                android:id="@+id/serverHostField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="1"
                android:inputType="text"
                tools:text="10.0.2.2" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/serverPort" />

            <EditText
                android:id="@+id/serverPortField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="1"
                android:inputType="text"
                tools:text="8080" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/username" />

            <EditText
                android:id="@+id/usernameField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="1"
                android:inputType="text"
                tools:text="amaks007" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/password" />

            <EditText
                android:id="@+id/passwordField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="1"
                android:inputType="textPassword"
                tools:text="Masterchef" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/firstName" />

            <EditText
                android:id="@+id/firstNameField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="1"
                android:inputType="text"
                tools:text="Austin" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/lastName" />

            <EditText
                android:id="@+id/lastNameField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="1"
                android:inputType="text"
                tools:text="McKamey" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/email" />

            <EditText
                android:id="@+id/emailField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="1"
                android:inputType="textEmailAddress"
                tools:text="austinmckamey007@gmail.com" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|end"
                android:text="@string/gender"
                android:translationY="14dp" />

            <RadioGroup
                android:orientation="horizontal"
                android:id="@+id/genderGroup">

                <RadioButton
                    android:id="@+id/male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male" />

                <RadioButton
                    android:id="@+id/female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female" />
            </RadioGroup>
        </TableRow>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="40dp">

            <Button
                android:id="@+id/signButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signLabel"
                android:translationX="-5dp" />

            <Button
                android:id="@+id/registerButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registerLabel"
                android:translationX="5dp" />
        </LinearLayout>
    </TableLayout>
</ScrollView>
