<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.PersonActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/firstNamePerson"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/first_name"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/gray" />

        <TextView
            android:id="@+id/lastNamePerson"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/last_name"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/gray" />

        <TextView
            android:id="@+id/genderPerson"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/gender2"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/gray" />

        <ExpandableListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/expandableListView"
            android:indicatorLeft="?android:attr/expandableListPreferredItemIndicatorLeft"
            android:dividerHeight="0.5dp"
            android:divider="@color/gray"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            tools:context=".UI.PersonActivity"/>


    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>